--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,3 +3,16 @@
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
+@font-face {
+  font-family: "WorkSans";
+  font-weight: normal;
+  font-style: normal;
+  src: url("/fonts/WorkSans-Regular.ttf");
+}
+
+@font-face {
+  font-family: "WorkSans";
+  font-weight: bold;
+  font-style: normal;
+  src: url("/fonts/WorkSans-Bold.ttf");
+}
