CHore: setup one time message

--- a/lib/push_control_web/components/layouts/root.html.heex
+++ b/lib/push_control_web/components/layouts/root.html.heex
@@ -22,7 +22,7 @@
       }
     </script>
   </head>
-  <body class="bg-white antialiased dark:bg-black">
+  <body class="antialiased bg-default-background dark:bg-darkMode-background">
     <%= @inner_content %>
   </body>
 </html>
