--- a/lib/push_control_web/controllers/page_html/home.html.heex
+++ b/lib/push_control_web/controllers/page_html/home.html.heex
@@ -1,4 +1,4 @@
-<header class="flex justify-between items-center px-6 py-3 bg-default-background dark:bg-darkMode-background">
+<header class="flex justify-between items-center px-6 py-3 bg-default-gray dark:bg-darkMode-gray">
   <div class="flex relative">
     <a href={~p"/"} class="flex gap-2">
       <img src="/images/logo.svg" alt="logo" class="h-8 w-auto" />
