Wip: live_compinent: @form key :form not found

--- a/lib/push_control_web/components/layouts/app.html.heex
+++ b/lib/push_control_web/components/layouts/app.html.heex
@@ -61,7 +61,7 @@
         <ul class="text-default-text dark:text-darkMode-text font-bold">
           <li class="flex gap-4 py-4">
             <img src="/images/logo.svg" alt="logo" class="h-6 w-auto" />
-            <.link href="/" class="hover:underline">Dashboard</.link>
+            <.link href="/dashboard" class="hover:underline">Dashboard</.link>
           </li>
           <li class="flex gap-4 py-4">
             <img src="/images/logo.svg" alt="logo" class="h-6 w-auto" />
@@ -75,7 +75,7 @@
         <div class="h-1" />
         <div class="flex gap-4 text-default-text dark:text-darkMode-text font-bold">
           <img src="/images/logo.svg" alt="logo" class="h-6 w-auto" />
-          <.link href="/" class="hover:underline">Settings</.link>
+          <.link href="/users/settings" class="hover:underline">Settings</.link>
           <div class="h-20" />
         </div>
       </div>
