Chore: fix message log display of history

--- a/lib/push_control_web/components/layouts/app.html.heex
+++ b/lib/push_control_web/components/layouts/app.html.heex
@@ -61,7 +61,7 @@
         <ul class="text-default-text dark:text-darkMode-text font-bold">
           <li class="flex gap-4 py-4">
             <img src="/images/logo.svg" alt="logo" class="h-6 w-auto" />
-            <.link href="/dashboard" class="hover:underline">Dashboard</.link>
+            <.link href="/dashboard/create_events" class="hover:underline">Create Events</.link>
           </li>
           <li class="flex gap-4 py-4">
             <img src="/images/logo.svg" alt="logo" class="h-6 w-auto" />
